tests/profile/error/deltatimes/wrongtype_value.profile
{
  "version": { "major": 12, "minor": 13 },
  "delta_times": [
    1, 10, "notANumber", 200
  ]
}
